Update event links to point to index.html

--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
                 <div class="resource-card">
                     <h4>📚 事件详情</h4>
                     <ul>
-                        <li><a href="docs/zh/events/">中文事件</a></li>
-                        <li><a href="docs/en/events/">English Events</a></li>
-                        <li><a href="docs/ja/events/">日本語イベント</a></li>
+                        <li><a href="docs/zh/events/index.html">中文事件</a></li>
+                        <li><a href="docs/en/events/index.html">English Events</a></li>
+                        <li><a href="docs/ja/events/index.html">日本語イベント</a></li>
                     </ul>
                 </div>
                 <div class="resource-card">
